<project>

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.amazon.ion</groupId>
  <artifactId>ion-hash-java</artifactId>
  <version>0.13.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>ion-hash-java</name>
  <description>
    A Java implementation of the Amazon Ion Hash specification.
  </description>
  <url>https://github.com/amzn/ion-hash-java</url>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Amazon Ion Team</name>
      <email>ion-team@amazon.com</email>
      <organization>Amazon</organization>
      <organizationUrl>https://github.com/amzn</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:amzn/ion-hash-java.git</connection>
    <developerConnection>scm:git:git@github.com:amzn/ion-hash-java.git</developerConnection>
    <url>git@github.com:amzn/ion-hash-java.git</url>
  </scm>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.amazon.ion</groupId>
      <artifactId>ion-java</artifactId>
      <version>1.4.0</version>
    </dependency>

    <!-- test dependencies -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <plugins>
      <!-- Run the unit tests. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <configuration>
          <excludes>
            <exclude>**/*TestCase</exclude>
          </excludes>
        </configuration>
      </plugin>
      <!-- TODO findbugs, checkstyle -->
    </plugins>
  </build>
</project>

